--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container-fluid bg-light sticky-top p-0">
         <nav class="navbar navbar-expand-lg navbar-light p-0">
             <a href="index.html" class="navbar-brand bg-primary py-4 px-5 me-0">
-                <h1 class="mb-0"><i class="bi bi-scissors"></i>Studio Totti</h1>
+                <h1 class="mb-0"><i class="bi bi-scissors"></i>Achei o Studio Totti</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -56,7 +56,7 @@
             </button>
             <div class="collapse navbar-collapse p-3" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="index.html" class="nav-item nav-link active">Porra Nenhuma</a>
+                    <a href="index.html" class="nav-item nav-link active">rree</a>
                     <a href="about.html" class="nav-item nav-link">Sobre</a>
                     <a href="service.html" class="nav-item nav-link">Serviços</a>
                     <a href="price.html" class="nav-item nav-link">Preços</a>
