--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="navbar-nav mx-auto">
                     <a href="index.html" class="nav-item nav-link active">Início</a>
                     <a href="about.html" class="nav-item nav-link">Sobre</a>
-                    <a href="agendamento.html" class="nav-item nav-link">Agendamento</a>
+                    <a href="agen291225.html" class="nav-item nav-link">Agendamento</a>
                     <a href="service.html" class="nav-item nav-link">Serviços</a>
                     <a href="price.html" class="nav-item nav-link">Preços</a>
                     <div class="nav-item dropdown">
